# polymarket-momentum-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: AWS_DEPLOYMENT.md
infra/cdk/: app.py  cdk.json
infra/cdk/lambda/api/: handler.py
infra/cdk/stacks/: bot_stack.py
infra/gui/: app.js  config.js  index.html  style.css
scanner/: README.md
scanner/docs/: AWS_DEPLOYMENT.md
scanner/infra/cdk/: app.py  cdk.json
scanner/infra/cdk/lambda/api/: handler.py
scanner/infra/cdk/lambda/scanner/: handler.py
scanner/infra/cdk/stacks/: scanner_stack.py
scanner/infra/gui/: app.js  config.js  index.html  style.css
scanner/src/polymarket_scanner/: __init__.py  classify.py  market_maker.py  metrics.py  paper.py  parse.py  polymarket.py  rank.py  scan.py
scanner/tests/: conftest.py  test_cdk_stack.py  test_classify.py  test_config_js.py  test_market_maker.py  test_metrics.py  test_paper.py  test_parse.py  test_rank.py  test_scan.py
src/polymarket_momentum_bot/: __init__.py  config.py  logging_setup.py  main.py  market_data.py  risk.py  strategy.py  trader.py
src/polymarket_momentum_bot/aws/: __init__.py  dynamo_config.py  secrets.py  state.py
tests/: conftest.py  test_aws_dynamo_config.py  test_aws_secrets.py  test_aws_state.py  test_cdk_ascii_descriptions.py  test_cdk_cognito_auth.py  test_config.py  test_dashboard_auth_ui.py  test_main_bootstrap.py  test_market_data.py  test_risk.py  test_strategy.py  test_trader.py
